--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
 <uses-permission android:name="android.permission.CAMERA" />
    <application
-        android:label="text_recognition"
+        android:label="ALPR"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
        <activity android:name="io.github.edufolly.fluttermobilevision.ocr.OcrCaptureActivity" />
