--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,11 +44,12 @@ dependencies:
   camera_process: ^0.0.7
   firebase_core: ^1.13.1
   cloud_firestore: ^3.1.10
+  
   intl: ^0.17.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: ^0.9.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -56,6 +57,11 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
+flutter_icons:
+  android: true
+  image_path: "images/station.png"
+  adaptive_icon_foreground: "images/station.png"
+  adaptive_icon_background: "#ffda44"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
